Fixing the spacing

--- a/schakolad/src/css/Home.css
+++ b/schakolad/src/css/Home.css
@@ -128,8 +128,6 @@ article {
 
 #why-chocolate {
     color: #f5f5dc; /* Light beige text */
-    padding: 3rem 2rem;
-    width: 83.75%;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.3);
     font-family: 'Georgia', serif;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.4);
@@ -137,14 +135,16 @@ article {
     height: fit-content;
 }
 
-#why-chocolate:hover {
+/* #why-chocolate:hover {
     transform: scale(1.01);
-}
+} */
 
 #why-chocolate h2 {
     text-align: center;
     font-size: 2.5rem;
     margin-bottom: 1rem;
+    margin-left: .5rem;
+    margin-right: .5rem;
     color: #d2b48c; /* Tan accent color */
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
 }
@@ -152,10 +152,14 @@ article {
 #why-chocolate p {
     font-size: 1.2rem;
     text-align: center;
+    margin-left: .5rem;
+    margin-right: .5rem;
     margin-bottom: 2rem;
 }
 
 #why-chocolate ul {
+    margin-left: .5rem;
+    margin-right: .5rem;
     list-style: none;
     padding-left: 0;
     display: flex;
